# fluig-cli

./: Cargo.toml  README.md
src/: fluig_services.rs  lib.rs  main.rs
src/fluig_services/: soap_client.rs  soap_generator.rs
