[package]
name = "fluig-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.0"
hyper = { version = "0.14.25", features = ["full"]}
hyper-tls = "0.5.0"
same-file = "1.0.6"
serde = {version = "1.0.156", features = ["derive"]}
serde_yaml = "0.9.19"
tokio = {version = "1.26.0", features = ["full"]}
